<resources>
    <string name="app_name">GlucoMonitor</string>
    <string name="title_camera">Camera</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_add">Add</string>
    <string name="title_record">Records</string>
    <string name="take_value">Save Value</string>
    <string name="init_value">000</string>
    <string name="init_time">000ms</string>
    <string name="glucose_value">Glucose Value</string>
    <string name="glucose_unit">Glucose Unit</string>
    <string name="unit_mg">mg/dL</string>
    <string name="unit_mmol">mmol/L</string>
    <string name="delete">Delete</string>
    <string name="edit">edit</string>
    <string name="longtext">LOOOOOOOOOOOOOOOOONG TEXT</string>
    <string name="datetime">Datetime</string>
    <string name="datetime_init_value">YYYY/MM/DD HH:MM:SS</string>
    <string name="open_gallery">Open Gallery</string>
    <string name="gallery_view_decs">Image from gallery</string>
    <string name="average_week">Avg (7 Days)</string>
    <string name="average_month">Avg (Month)</string>
    <string name="average_all">Avg (All)</string>
    <string name="chart">Chart</string>
    <string-array name="chart_array">
        <item>Bar</item>
        <item>Line</item>
        <item>Pie</item>
    </string-array>
</resources>