<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_record"
        android:name="com.daffaromyz.glucomonitor.ui.record.RecordFragment"
        android:label="@string/title_record"
        tools:layout="@layout/fragment_record" >
        <action
            android:id="@+id/action_navigate_to_edit"
            app:destination="@id/navigation_edit"
            app:popUpTo="@id/navigation_record" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.daffaromyz.glucomonitor.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" >
        <action
            android:id="@+id/action_navigation_dashboard_to_navigation_record"
            app:destination="@id/navigation_record" />
    </fragment>

    <fragment
        android:id="@+id/navigation_camera"
        android:name="com.daffaromyz.glucomonitor.ui.camera.CameraFragment"
        android:label="@string/title_camera"
        tools:layout="@layout/fragment_camera" />

    <fragment
        android:id="@+id/navigation_add"
        android:name="com.daffaromyz.glucomonitor.ui.add.AddFragment"
        android:label="@string/title_add"
        tools:layout="@layout/fragment_add" />

    <fragment
        android:id="@+id/navigation_edit"
        android:name="com.daffaromyz.glucomonitor.ui.edit.EditFragment"
        android:label="@string/edit"
        tools:layout="@layout/fragment_edit">
        <argument
            android:name="glucoseid"
            app:argType="integer" />
        <action
            android:id="@+id/action_navigate_to_record"
            app:destination="@id/navigation_record" />
    </fragment>
</navigation>