<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.add.AddFragment">

    <TextView
        android:id="@+id/text_value_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/glucose_value"/>

    <EditText
        android:id="@+id/text_value_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        android:hint="@string/init_value"
        android:minWidth="100dp"
        android:maxWidth="200dp"
        android:inputType="numberDecimal"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_value_title"
        android:importantForAutofill="no"/>

    <TextView
        android:id="@+id/text_unit_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_value_input"
        android:text="@string/glucose_unit"/>

    <RadioGroup
        android:id="@+id/unit_radio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_unit_title">

        <RadioButton
            android:id="@+id/mg_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unit_mg" />

        <RadioButton
            android:id="@+id/mmol_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unit_mmol" />

    </RadioGroup>

    <Button
        android:id="@+id/save_value_button"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:layout_marginBottom="100dp"
        android:text="@string/take_value"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>